[Mac] fast/forms/text-control-intrinsic-widths.html fails when MS Office is installed https://bugs.webkit.org/show_bug.cgi?id=142720

Reviewed by Myles C. Maxfield.

Tools:

Activate system copies of Microsoft fonts for the current process, thus overriding
any other ones that could be preferred by the system otherwise.

* DumpRenderTree/mac/DumpRenderTree.mm:
(activateSystemCoreWebFonts):
(adjustFonts):
* WebKitTestRunner/InjectedBundle/cocoa/ActivateFontsCocoa.mm:
(WTR::activateSystemCoreWebFonts):
(WTR::activateFonts):

LayoutTests:

* platform/mac-mavericks/fast/forms/text-control-intrinsic-widths-expected.txt: Removed.
Mavericks result is no different from Yosemite.


Canonical link: https://commits.webkit.org/160748@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@181569 268f45cc-cd09-0410-ab3c-d52691b4dbfc